--- a/src/App.css
+++ b/src/App.css
@@ -1,30 +1,6 @@
-.App {
-  text-align: left;
-}
-
-.contact {
-  border: 1px solid #DEDEDE;
-  border-radius: 5px;
-  padding: 15px;
-  margin: 15px;
-  background-color: green;
-  color: white;
-}
-
-.contact--female {
-  background-color: tomato;
-}
-
-.contact__name {
-  font-size: 20px;
-  margin-top: 0;
-}
-
-.contact__intro {
-  font-size: 16px;
-  margin-bottom: 0;
-}
-
-.contact__intro strong {
-  font-weight: 600;
+body {
+  padding: 0;
+  margin: 0;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  line-height: 2em;
 }
